testsuite/tests/partial-sigs/should_fail/T12039.hs
{-# LANGUAGE PartialTypeSignatures #-}

module T12039 where

class Num _ => B a
