testsuite/tests/partial-sigs/should_fail/T12039.stderr

T12039.hs:5:11: error: [GHC-65507]
    Wildcard ‘_’ not allowed
      in the declaration for class ‘B’
